<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".Curly">

    <ImageView
        android:id="@+id/ivCurlyPatterns"
        android:layout_width="180dp"
        android:layout_height="180dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.93"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.143"
        app:srcCompat="@drawable/curly_pattern" />

    <TextView
        android:id="@+id/tvTitleCurly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvTitleCurly"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.031" />

    <ImageView
        android:id="@+id/ivCurly2"
        android:layout_width="180dp"
        android:layout_height="180dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.064"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.143"
        app:srcCompat="@drawable/curly_hair_2" />

    <TextView
        android:id="@+id/tvCurlyDesc"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:text="@string/tvCurlyDesc"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.457" />

    <TextView
        android:id="@+id/tvMore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvMore"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.738" />

    <Button
        android:id="@+id/btTipsCurly"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#C0CA5C "
        android:text="@string/btTips"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.815" />

    <Button
        android:id="@+id/btGoCurly"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:backgroundTint="#EDAD4E"
        android:text="@string/btGo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.94"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.664" />

    <Spinner
        android:id="@+id/tvCurlyGroup"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:entries="@array/tvCurlyGroup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.082"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.664" />

    <TextView
        android:id="@+id/tvSelectType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvSelectType"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.594" />

    <Button
        android:id="@+id/btStylesCurly"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#C0CA5C "
        android:text="@string/btStyles"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.885" />

    <Button
        android:id="@+id/btProductsCurly"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#C0CA5C "
        android:text="@string/btProducts"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.956" />

</androidx.constraintlayout.widget.ConstraintLayout>